--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-Sistema.drawio
+UML/Sistema.drawio
+UML/SistemaDH_V1.jpg
